Adds identical feature point routes
